--- a/components/scss/_nav.scss
+++ b/components/scss/_nav.scss
@@ -1,290 +1,302 @@
 /* Navigation */
 .nav-social {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: auto;
-  background-color: $yellow;
-  border-bottom: 3px solid $primary;
-  z-index: 3;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: auto;
+    background-color: $yellow;
+    border-bottom: 3px solid $primary;
+    z-index: 3;
 
-  .social__items {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
-  }
+    .social__items {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: flex-end;
+    }
 
-  .social_item {
-    display: block;
+    .social_item {
+        display: block;
 
-    a {
-      display: block;
-      padding: 5px 0;
-      background-color: transparent;
+        a {
+            display: block;
+            padding: 5px 0;
+            background-color: transparent;
 
-      &:hover,
-      &:active {
-        background-color: $primary;
+            &:hover,
+            &:active {
+                background-color: $primary;
+
+                svg {
+                    fill: $white;
+                }
+            }
+        }
 
         svg {
-          fill: $white;
+            display: block;
+            width: auto;
+            height: 25px;
+            margin: 0 5px;
+            fill: $primary;
+            transition: fill 0.3s ease;
         }
-      }
     }
-
-    svg {
-      display: block;
-      width: auto;
-      height: 25px;
-      margin: 0 5px;
-      fill: $primary;
-      transition: fill 0.3s ease;
-    }
-  }
 }
 
 .nav-primary {
-  position: fixed;
-  top: 38px;
-  left: 0;
-  width: 100%;
-  background-color: $white;
-  z-index: 3;
+    position: fixed;
+    top: 3px;
+    left: 0;
+    width: 100%;
+    background-color: $white;
+    z-index: 3;
 
-  ul {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
+    ul {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
 
-  li {
-    position: relative;
-    list-style-type: none;
-    display: inline-block;
-    margin: 0;
+    li {
+        position: relative;
+        list-style-type: none;
+        display: inline-block;
+        margin: 0;
 
-    /* 
+        /* 
 		* https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type
 		* List Style Type | Accessibility concerns
 		*/
-    &::before {
-      content: "\200B";
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
+        &::before {
+            content: "\200B";
+            position: absolute;
+            top: -9999px;
+            left: -9999px;
+        }
+
+        &.current a,
+        &:hover > a,
+        &:active > a,
+        &:focus-within > a {
+            color: $white;
+            background-color: $secondary;
+        }
     }
 
-    &.current a,
-    &:hover > a,
-    &:active > a,
-    &:focus-within > a {
-      color: $white;
-      background-color: $secondary;
-    }
-  }
+    a {
+        display: block;
+        text-decoration: none;
+        color: $primary;
+        background-color: $white;
+        line-height: 1;
+        padding: 20px;
 
-  a {
-    display: block;
-    text-decoration: none;
-    color: $primary;
-    background-color: $white;
-    line-height: 1;
-    padding: 20px;
-
-    &:hover,
-    &:active,
-    &:focus {
-      color: $white;
-      background-color: $secondary;
-    }
-  }
-
-  ul ul {
-    visibility: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 3;
-    box-shadow: 1px 1px 1px rgba($black, 0.25);
-
-    &:focus-within {
-      visibility: visible;
-    }
-  }
-
-  ul ul ul {
-    visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 100%;
-    z-index: 3;
-    box-shadow: 1px 1px 1px rgba($black, 0.25);
-
-    &:focus-within {
-      visibility: visible;
-    }
-  }
-
-  ul li,
-  ul ul li {
-    &:hover > ul,
-    &:active > ul {
-      visibility: visible;
-    }
-  }
-
-  ul li a,
-  ul ul li a {
-    &:focus + ul {
-      visibility: visible;
-    }
-  }
-
-  .sub_menu {
-    text-align: left;
-  }
-
-  .sub_menu li {
-    display: block;
-    margin: 0;
-  }
-
-  .sub_menu a {
-    display: block;
-    color: $white;
-    white-space: nowrap;
-    border-bottom: none;
-    padding: 20px;
-    background-color: $secondary;
-
-    &:hover,
-    &:active,
-    &:focus {
-      color: $primary;
-      background-color: $white;
-    }
-  }
-}
-
-.menu-icon {
-  display: block;
-  height: 35px;
-  font-size: 65px;
-}
-
-a.menu-open {
-  display: none;
-  cursor: pointer;
-  position: absolute;
-  top: 5px;
-  left: 8px;
-  color: $white;
-
-  .menu-icon {
-    width: 35px;
-    line-height: 30px;
-  }
-}
-
-a.menu-close {
-  display: none;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 0;
-  color: $white;
-  padding: 0;
-  background: none;
-
-  .menu-icon {
-    width: 47px;
-    line-height: 45px;
-  }
-}
-
-/* Mobile Styles */
-@media (max-width: 960px) {
-  a.menu-open {
-    display: block;
-  }
-
-  a.menu-close {
-    display: block;
-  }
-
-  .nav-primary {
-    position: fixed;
-    top: 0;
-    left: -320px;
-    background-color: $secondary;
-    width: 320px;
-    max-width: 100%;
-    height: 100vh;
-    overflow-y: auto;
-    padding: 0;
-    transition: left 0.5s ease;
-
-    &.active {
-      left: 0;
+        &:hover,
+        &:active,
+        &:focus {
+            color: $white;
+            background-color: $secondary;
+        }
     }
 
-    & > ul {
-      margin-top: 50px;
+    ul ul {
+        visibility: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 3;
+        box-shadow: 1px 1px 1px rgba($black, 0.25);
+
+        &:focus-within {
+            visibility: visible;
+        }
     }
 
-    ul ul,
     ul ul ul {
-      position: static;
-      max-height: 0;
-      overflow: hidden;
-      visibility: hidden;
-      opacity: 0;
-      box-shadow: none;
-      transition: all 0.5s ease;
+        visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: 100%;
+        z-index: 3;
+        box-shadow: 1px 1px 1px rgba($black, 0.25);
+
+        &:focus-within {
+            visibility: visible;
+        }
     }
 
     ul li,
     ul ul li {
-      &:hover > ul,
-      &:active > ul,
-      &:focus > ul {
-        max-height: 2000px;
-        visibility: visible;
-        opacity: 1;
-      }
+        &:hover > ul,
+        &:active > ul {
+            visibility: visible;
+        }
     }
 
-    li {
-      display: block;
-      margin: 0;
-
-      &:hover > a,
-      &:active > a,
-      &:focus > a {
-        background-color: transparent;
-        color: $white;
-      }
+    ul li a,
+    ul ul li a {
+        &:focus + ul {
+            visibility: visible;
+        }
     }
 
-    li a,
+    .sub_menu {
+        text-align: left;
+    }
+
+    .sub_menu li {
+        display: block;
+        margin: 0;
+    }
+
     .sub_menu a {
-      display: block;
-      width: 100%;
-      background-color: transparent;
-      text-align: left;
-      padding: 15px;
-      color: $white;
-
-      &:hover,
-      &:active,
-      &:focus {
-        background-color: $primary;
+        display: block;
         color: $white;
-      }
+        white-space: nowrap;
+        border-bottom: none;
+        padding: 20px;
+        background-color: $secondary;
+
+        &:hover,
+        &:active,
+        &:focus {
+            color: $primary;
+            background-color: $white;
+        }
     }
-  }
+}
+
+.line {
+    display: block;
+    height: 3px;
+    margin: 5px 0;
+    background-color: #fff;
+    border-radius: 50vh;
+    transform: rotateZ(0) translate(0, 0);
+    transition: all 500ms ease;
+
+    &:nth-of-type(1) {
+        width: 50%;
+    }
+
+    &:nth-of-type(2) {
+        width: 75%;
+    }
+
+    &:nth-of-type(3) {
+        width: 100%;
+    }
+}
+
+.menu_open {
+    display: none;
+    position: relative;
+    width: 35px;
+    margin: 1rem 0;
+    padding: 0;
+    z-index: 4;
+
+    &:hover > .line {
+        width: 100%;
+    }
+
+    &:active > .line,
+    &.clicked > .line {
+        background-color: $primary;
+
+        &:nth-of-type(1) {
+            width: 100%;
+            transform: rotateZ(45deg) translate(6px, 5.667px);
+        }
+
+        &:nth-of-type(2) {
+            width: 0;
+        }
+
+        &:nth-of-type(3) {
+            transform: rotateZ(-45deg) translate(6px, -5.667px);
+        }
+    }
+}
+
+/* Mobile Styles */
+@media (max-width: 960px) {
+    .menu_open {
+        display: block;
+    }
+
+    .nav-primary {
+        position: fixed;
+        top: 0;
+        left: -320px;
+        // background-color: $secondary;
+        width: 320px;
+        max-width: 100%;
+        height: 100vh;
+        overflow-y: auto;
+        padding: 0;
+        transition: left 400ms ease;
+
+        &.active {
+            left: 0;
+        }
+
+        & > ul {
+            margin-top: calc(29px + 2rem);
+        }
+
+        ul ul,
+        ul ul ul {
+            position: static;
+            max-height: 0;
+            overflow: hidden;
+            visibility: hidden;
+            opacity: 0;
+            box-shadow: none;
+            transition: all 0.5s ease;
+        }
+
+        ul li,
+        ul ul li {
+            &:hover > ul,
+            &:active > ul,
+            &:focus > ul {
+                max-height: 2000px;
+                visibility: visible;
+                opacity: 1;
+            }
+        }
+
+        li {
+            display: block;
+            margin: 0;
+
+            &:hover > a,
+            &:active > a,
+            &:focus > a {
+                background-color: transparent;
+                color: $white;
+            }
+        }
+
+        li a,
+        .sub_menu a {
+            display: block;
+            width: 100%;
+            background-color: transparent;
+            text-align: left;
+            padding: 15px;
+            // color: $white;
+
+            &:hover,
+            &:active {
+                background-color: $primary;
+                // color: $white;
+            }
+        }
+    }
 }
